--- a/read_imdb.ipynb
+++ b/read_imdb.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Read Comma/Tab Separated Values (CSV/TSV) file: IMDb Sentiment\n",
+    "\n",
+    "The code below can be used to read the Internet Movie Database (IMDb) Sentiment data set, which consists of two files containing moview reviews and their known sentiment labels (0/1 = negative/positive), and another file containing reviews only. The reviews with labels can be used for training and testing (supervised learning), while the unlabeled data can be used for unsupervised learning (e.g., learning word embeddings).\n",
+    "\n",
+    "As the files are read, the code extracts the review text and the sentiment class (if present), and outputs a list of dictionaries in JSON format.\n",
+    "\n",
+    "The tsv-formated data originates from: https://www.kaggle.com/c/word2vec-nlp-tutorial"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -29,7 +42,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data = read_imdb(\"/home/your_username/path_to_data/labeledTrainData.tsv\")"
