--- a/bow_classifier.ipynb
+++ b/bow_classifier.ipynb
@@ -141,26 +141,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train on 20000 samples, validate on 5000 samples\n",
-      "Epoch 1/10\n",
-      "20000/20000 [==============================] - 93s 5ms/step - loss: 0.5521 - acc: 0.7808 - val_loss: 0.4617 - val_acc: 0.8444\n",
-      "Epoch 2/10\n",
-      "20000/20000 [==============================] - 88s 4ms/step - loss: 0.4077 - acc: 0.8566 - val_loss: 0.3859 - val_acc: 0.8594\n",
-      "Epoch 3/10\n",
-      "20000/20000 [==============================] - 94s 5ms/step - loss: 0.3429 - acc: 0.8775 - val_loss: 0.3477 - val_acc: 0.8678\n",
-      "Epoch 4/10\n",
-      "20000/20000 [==============================] - 89s 4ms/step - loss: 0.3031 - acc: 0.8907 - val_loss: 0.3252 - val_acc: 0.8732\n",
-      "Epoch 5/10\n",
-      "20000/20000 [==============================] - 92s 5ms/step - loss: 0.2732 - acc: 0.9020 - val_loss: 0.3087 - val_acc: 0.8774\n",
-      "Epoch 6/10\n",
-      " 9800/20000 [=============>................] - ETA: 44s - loss: 0.2496 - acc: 0.9130"
+      "Train on 22500 samples, validate on 2500 samples\n",
+      "Epoch 1/20\n",
+      "22500/22500 [==============================] - 100s 4ms/step - loss: 0.5417 - acc: 0.7896 - val_loss: 0.4432 - val_acc: 0.8452\n",
+      "Epoch 2/20\n",
+      "22500/22500 [==============================] - 98s 4ms/step - loss: 0.3962 - acc: 0.8575 - val_loss: 0.3698 - val_acc: 0.8608\n",
+      "Epoch 3/20\n",
+      "22500/22500 [==============================] - 97s 4ms/step - loss: 0.3336 - acc: 0.8791 - val_loss: 0.3356 - val_acc: 0.8656\n",
+      "Epoch 4/20\n",
+      "22500/22500 [==============================] - 92s 4ms/step - loss: 0.2947 - acc: 0.8928 - val_loss: 0.3097 - val_acc: 0.8732\n",
+      "Epoch 5/20\n",
+      "22500/22500 [==============================] - 94s 4ms/step - loss: 0.2658 - acc: 0.9049 - val_loss: 0.2948 - val_acc: 0.8760\n",
+      "Epoch 6/20\n",
+      "22500/22500 [==============================] - 96s 4ms/step - loss: 0.2424 - acc: 0.9143 - val_loss: 0.2840 - val_acc: 0.8800\n",
+      "Epoch 7/20\n",
+      "22500/22500 [==============================] - 123s 5ms/step - loss: 0.2229 - acc: 0.9225 - val_loss: 0.2787 - val_acc: 0.8852\n",
+      "Epoch 8/20\n",
+      "22500/22500 [==============================] - 121s 5ms/step - loss: 0.2058 - acc: 0.9304 - val_loss: 0.2710 - val_acc: 0.8884\n",
+      "Epoch 9/20\n",
+      "22500/22500 [==============================] - 118s 5ms/step - loss: 0.1905 - acc: 0.9391 - val_loss: 0.2678 - val_acc: 0.8896\n",
+      "Epoch 10/20\n",
+      "22500/22500 [==============================] - 119s 5ms/step - loss: 0.1769 - acc: 0.9457 - val_loss: 0.2626 - val_acc: 0.8904\n",
+      "Epoch 11/20\n",
+      "22500/22500 [==============================] - 117s 5ms/step - loss: 0.1646 - acc: 0.9516 - val_loss: 0.2599 - val_acc: 0.8912\n",
+      "Epoch 12/20\n",
+      "22500/22500 [==============================] - 117s 5ms/step - loss: 0.1532 - acc: 0.9559 - val_loss: 0.2584 - val_acc: 0.8932\n",
+      "Epoch 13/20\n",
+      "22500/22500 [==============================] - 119s 5ms/step - loss: 0.1430 - acc: 0.9607 - val_loss: 0.2558 - val_acc: 0.8920\n",
+      "Epoch 14/20\n",
+      "22500/22500 [==============================] - 101s 4ms/step - loss: 0.1335 - acc: 0.9648 - val_loss: 0.2548 - val_acc: 0.8928\n",
+      "Epoch 15/20\n",
+      "22500/22500 [==============================] - 90s 4ms/step - loss: 0.1248 - acc: 0.9690 - val_loss: 0.2544 - val_acc: 0.8940\n",
+      "Epoch 16/20\n",
+      "22500/22500 [==============================] - 90s 4ms/step - loss: 0.1167 - acc: 0.9723 - val_loss: 0.2558 - val_acc: 0.8964\n",
+      "Epoch 17/20\n",
+      "22500/22500 [==============================] - 91s 4ms/step - loss: 0.1093 - acc: 0.9753 - val_loss: 0.2538 - val_acc: 0.8952\n",
+      "Epoch 18/20\n",
+      "22500/22500 [==============================] - 90s 4ms/step - loss: 0.1025 - acc: 0.9775 - val_loss: 0.2540 - val_acc: 0.8964\n",
+      "Epoch 19/20\n",
+      "22500/22500 [==============================] - 90s 4ms/step - loss: 0.0961 - acc: 0.9805 - val_loss: 0.2542 - val_acc: 0.8964\n",
+      "Epoch 20/20\n",
+      "22500/22500 [==============================] - 90s 4ms/step - loss: 0.0903 - acc: 0.9828 - val_loss: 0.2555 - val_acc: 0.8984\n"
      ]
     }
    ],
@@ -176,14 +204,22 @@
     "outp=Dense(class_count,activation=\"softmax\")(hidden)\n",
     "model=Model(inputs=[inp], outputs=[outp])\n",
     "model.compile(optimizer=\"sgd\",loss=\"categorical_crossentropy\",metrics=['accuracy'])\n",
-    "hist=model.fit(feature_matrix,classes_1hot,batch_size=100,verbose=1,epochs=10,validation_split=0.2)\n"
+    "hist=model.fit(feature_matrix,classes_1hot,batch_size=100,verbose=1,epochs=20,validation_split=0.1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.8451999950408936, 0.8608000111579895, 0.8656000018119812, 0.8732000017166137, 0.8759999990463256, 0.88, 0.8851999974250794, 0.888400001525879, 0.8896000027656555, 0.8904000043869018, 0.8912000036239625, 0.8932000064849853, 0.892000002861023, 0.8928000068664551, 0.8940000057220459, 0.8964000034332276, 0.8952000069618226, 0.8964000058174133, 0.8964000058174133, 0.8984000039100647]\n"
+     ]
+    }
+   ],
    "source": [
     "print(hist.history[\"val_acc\"])"
    ]
