--- a/read_news.ipynb
+++ b/read_news.ipynb
@@ -15,10 +15,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import xml.etree.ElementTree as et\n",
@@ -54,17 +52,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reading reut2-005.sgm\n",
+      "Reading reut2-016.sgm\n",
+      "Reading reut2-007.sgm\n",
+      "Reading reut2-003.sgm\n",
+      "Reading reut2-020.sgm\n",
+      "Reading reut2-019.sgm\n",
+      "Reading reut2-001.sgm\n",
+      "Reading reut2-021.sgm\n",
+      "Reading reut2-013.sgm\n",
+      "Reading reut2-004.sgm\n",
+      "Reading reut2-011.sgm\n",
+      "Reading reut2-008.sgm\n",
+      "Reading reut2-018.sgm\n",
+      "Reading reut2-012.sgm\n",
+      "Reading reut2-000.sgm\n",
+      "Reading reut2-014.sgm\n",
+      "Reading reut2-002.sgm\n",
+      "Reading reut2-009.sgm\n",
+      "Reading reut2-015.sgm\n",
+      "Reading reut2-017.sgm\n",
+      "Reading reut2-006.sgm\n",
+      "Reading reut2-010.sgm\n"
+     ]
+    }
+   ],
    "source": [
     "data = []\n",
-    "path = \"data/\"\n",
+    "path = \"data/reuters\"\n",
     "# Read all XML (sgm) files in directory\n",
     "for filename in os.listdir(path):\n",
     "    if '.sgm' in filename:\n",
     "        print(\"Reading\", filename)\n",
-    "        data += read_news(path+filename)"
+    "        data += read_news(os.path.join(path,filename))"
    ]
   },
   {
@@ -76,9 +103,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9494"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check number of articles\n",
     "len(data)"
@@ -86,9 +124,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "66"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check number of classes\n",
     "len(set([x['class'] for x in data]))"
@@ -96,9 +145,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3945 earn\n",
+      "2362 acq\n",
+      "408 crude\n",
+      "361 trade\n",
+      "307 money-fx\n",
+      "285 interest\n",
+      "161 money-supply\n",
+      "158 ship\n",
+      "143 sugar\n",
+      "116 coffee\n",
+      "99 gold\n",
+      "83 gnp\n",
+      "79 cpi\n",
+      "63 cocoa\n",
+      "55 jobs\n",
+      "54 copper\n",
+      "53 reserves\n",
+      "51 grain\n",
+      "50 alum\n",
+      "49 ipi\n",
+      "47 iron-steel\n",
+      "45 nat-gas\n",
+      "41 rubber\n",
+      "37 veg-oil\n",
+      "32 bop\n",
+      "30 tin\n",
+      "26 cotton\n",
+      "26 wpi\n",
+      "22 retail\n",
+      "22 orange\n",
+      "22 gas\n",
+      "21 pet-chem\n",
+      "20 livestock\n",
+      "19 strategic-metal\n",
+      "18 housing\n",
+      "16 zinc\n",
+      "14 lei\n",
+      "14 heat\n",
+      "12 income\n",
+      "12 lumber\n",
+      "11 fuel\n",
+      "11 carcass\n",
+      "11 silver\n",
+      "9 oilseed\n",
+      "8 lead\n",
+      "7 instal-debt\n",
+      "7 meal-feed\n",
+      "6 tea\n",
+      "6 dlr\n",
+      "6 yen\n",
+      "5 potato\n",
+      "4 nickel\n",
+      "4 cpu\n",
+      "4 jet\n",
+      "3 inventories\n",
+      "3 platinum\n",
+      "2 groundnut\n",
+      "1 l-cattle\n",
+      "1 wool\n",
+      "1 hog\n",
+      "1 rand\n",
+      "1 rice\n",
+      "1 stg\n",
+      "1 propane\n",
+      "1 naphtha\n",
+      "1 coconut\n"
+     ]
+    }
+   ],
    "source": [
     "# Check number of articles per class\n",
     "import collections\n",
@@ -112,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,9 +244,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9465"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check length\n",
     "len(data)"
@@ -132,9 +265,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "51"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check number of classes\n",
     "len(set([x['class'] for x in data]))"
@@ -142,12 +286,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import json\n",
+    "with open(\"data/reuters_51cls.json\",\"w\") as f:\n",
+    "    json.dump(data,f,indent=2)"
+   ]
   }
  ],
  "metadata": {
